Add test blog post with margins.

--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -3,3 +3,8 @@ body {
   text-align: center;
   font-family: Helvetica, sans-serif;
 }
+
+.blog-post > p {
+  margin-left: 20%;
+  margin-right: 20%;
+}
