--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -4,7 +4,12 @@ body {
   font-family: Helvetica, sans-serif;
 }
 
-.blog-post > p {
-  margin-left: 20%;
-  margin-right: 20%;
+header > h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
 }
