--- a/docs/css/markdown_styles.css
+++ b/docs/css/markdown_styles.css
@@ -1,3 +1,10 @@
 img {
     border-radius: 50%;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
