--- a/docs/_layouts/template.html
+++ b/docs/_layouts/template.html
@@ -14,13 +14,15 @@
       <h1 class="project-name">VR Dodgeball</h1>
       <h2 class="project-tagline"></h2>
       {% for page in site.pages %}
-        <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
+        {% if page.title != ""}
+          <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
+        {% endif %}
       {% endfor %}
       <a href="https://github.com/UWRealityLab/xrcapstone21sp-team1" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
-      
+
       {{ content }}
 
       <footer class="site-footer">
