--- a/docs/_layouts/template.html
+++ b/docs/_layouts/template.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">VR Dodgeball</h1>
       <h2 class="project-tagline"></h2>
       {% for page in site.pages %}
-        {% if page.title != ""}
+        {% if page.title != "" %}
           <a href= {{ page.filename }} class="btn">{{ page.title }}</a>
         {% endif %}
       {% endfor %}
