--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box; }
-  
+
   body {
     padding: 0;
     margin: 0;
@@ -8,13 +8,17 @@
     font-size: 16px;
     line-height: 1.5;
     color: #606c71; }
-  
+
   a {
     color: #1e6bb8;
     text-decoration: none; }
     a:hover {
       text-decoration: underline; }
-  
+
+  .project-name > a {
+    color: white;
+  }
+
   .btn {
     display: inline-block;
     margin-bottom: 1rem;
@@ -27,22 +31,22 @@
     transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
     .btn + .btn {
       margin-left: 1rem; }
-  
+
   .btn:hover {
     color: rgba(255, 255, 255, 0.8);
     text-decoration: none;
     background-color: rgba(255, 255, 255, 0.2);
     border-color: rgba(255, 255, 255, 0.3); }
-  
+
   @media screen and (min-width: 64em) {
     .btn {
       padding: 0.75rem 1rem; } }
-  
+
   @media screen and (min-width: 42em) and (max-width: 64em) {
     .btn {
       padding: 0.6rem 0.9rem;
       font-size: 0.9rem; } }
-  
+
   @media screen and (max-width: 42em) {
     .btn {
       display: block;
@@ -52,58 +56,58 @@
       .btn + .btn {
         margin-top: 1rem;
         margin-left: 0; } }
-  
+
   .page-header {
     color: #fff;
     text-align: center;
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957); }
-  
+
   @media screen and (min-width: 64em) {
     .page-header {
       padding: 5rem 6rem; } }
-  
+
   @media screen and (min-width: 42em) and (max-width: 64em) {
     .page-header {
       padding: 3rem 4rem; } }
-  
+
   @media screen and (max-width: 42em) {
     .page-header {
       padding: 2rem 1rem; } }
-  
+
   .project-name {
     margin-top: 0;
     margin-bottom: 0.1rem; }
-  
+
   @media screen and (min-width: 64em) {
     .project-name {
       font-size: 3.25rem; } }
-  
+
   @media screen and (min-width: 42em) and (max-width: 64em) {
     .project-name {
       font-size: 2.25rem; } }
-  
+
   @media screen and (max-width: 42em) {
     .project-name {
       font-size: 1.75rem; } }
-  
+
   .project-tagline {
     margin-bottom: 2rem;
     font-weight: normal;
     opacity: 0.7; }
-  
+
   @media screen and (min-width: 64em) {
     .project-tagline {
       font-size: 1.25rem; } }
-  
+
   @media screen and (min-width: 42em) and (max-width: 64em) {
     .project-tagline {
       font-size: 1.15rem; } }
-  
+
   @media screen and (max-width: 42em) {
     .project-tagline {
       font-size: 1rem; } }
-  
+
   .main-content :first-child {
     margin-top: 0; }
   .main-content img {
@@ -202,44 +206,44 @@
     margin: 1rem 0;
     background-color: #eff0f1;
     border: 0; }
-  
+
   @media screen and (min-width: 64em) {
     .main-content {
       max-width: 64rem;
       padding: 2rem 6rem;
       margin: 0 auto;
       font-size: 1.1rem; } }
-  
+
   @media screen and (min-width: 42em) and (max-width: 64em) {
     .main-content {
       padding: 2rem 4rem;
       font-size: 1.1rem; } }
-  
+
   @media screen and (max-width: 42em) {
     .main-content {
       padding: 2rem 1rem;
       font-size: 1rem; } }
-  
+
   .site-footer {
     padding-top: 2rem;
     margin-top: 2rem;
     border-top: solid 1px #eff0f1; }
-  
+
   .site-footer-owner {
     display: block;
     font-weight: bold; }
-  
+
   .site-footer-credits {
     color: #819198; }
-  
+
   @media screen and (min-width: 64em) {
     .site-footer {
       font-size: 1rem; } }
-  
+
   @media screen and (min-width: 42em) and (max-width: 64em) {
     .site-footer {
       font-size: 1rem; } }
-  
+
   @media screen and (max-width: 42em) {
     .site-footer {
       font-size: 0.9rem; } }
