Correct link to homepage.

--- a/docs/_layouts/template.html
+++ b/docs/_layouts/template.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a href="/">VR Dodgeball</a></h1>
+      <h1 class="project-name"><a href="/xrcapstone21sp-team1/">VR Dodgeball</a></h1>
       <h2 class="project-tagline"></h2>
       {% for page in site.pages %}
         {% if page.title != "" and page.title %}
