--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -9,6 +9,15 @@
     line-height: 1.5;
     color: #606c71; }
 
+  table {
+    table-layout: fixed ;
+    width: 100% ;
+  }
+  
+  td {
+    width: 25% ;
+  }
+
   a {
     color: #1e6bb8;
     text-decoration: none; }
