--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -69,8 +69,8 @@
   .page-header {
     color: #fff;
     text-align: center;
-    background-color: #159957;
-    background-image: linear-gradient(120deg, #155799, #159957); }
+    opacity: 0.4;
+    background-image: url(../images/main.png) }
 
   @media screen and (min-width: 64em) {
     .page-header {
