--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -67,9 +67,9 @@
         margin-left: 0; } }
 
   .page-header {
-    /* color: #fff; */
+    color: #000;
     text-align: center;
-    opacity: 0.7;
+    opacity: 0.8;
     background-image: url(../images/main-crop.png) }
 
   @media screen and (min-width: 64em) {
