--- a/docs/css/stylesheet.css
+++ b/docs/css/stylesheet.css
@@ -31,7 +31,7 @@
   .btn {
     display: inline-block;
     margin-bottom: 1rem;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.08);
     border-color: rgba(255, 255, 255, 0.2);
     border-style: solid;
@@ -103,7 +103,7 @@
   .project-tagline {
     margin-bottom: 2rem;
     font-weight: normal;
-    opacity: 0.7; }
+    opacity: 0.9; }
 
   @media screen and (min-width: 64em) {
     .project-tagline {
